@@ -1,0 +1,77 @@
+! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+! +                                                           +
+! +  glimmer_map_init.f90 - part of the GLIMMER ice model     + 
+! +                                                           +
+! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+! 
+! Copyright (C) 2004 GLIMMER contributors - see COPYRIGHT file 
+! for list of contributors.
+!
+! This program is free software; you can redistribute it and/or 
+! modify it under the terms of the GNU General Public License as 
+! published by the Free Software Foundation; either version 2 of 
+! the License, or (at your option) any later version.
+!
+! This program is distributed in the hope that it will be useful, 
+! but WITHOUT ANY WARRANTY; without even the implied warranty of 
+! MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the 
+! GNU General Public License for more details.
+!
+! You should have received a copy of the GNU General Public License 
+! along with this program; if not, write to the Free Software 
+! Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+! 02111-1307 USA
+!
+! GLIMMER is maintained by:
+!
+! Ian Rutt
+! School of Geographical Sciences
+! University of Bristol
+! University Road
+! Bristol
+! BS8 1SS
+! UK
+!
+! email: <i.c.rutt@bristol.ac.uk> or <ian.rutt@physics.org>
+!
+! GLIMMER is hosted on NeSCForge:
+!
+! http://forge.nesc.ac.uk/projects/glimmer/
+!
+! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
+
+#ifdef HAVE_CONFIG_H
+#include <config.inc>
+#endif
+
+module glimmer_map_init
+
+  !*FD Contains initialisation routines for 
+  !*FD individual projection types.
+
+  use glimmer_map_types
+
+  implicit none
+
+contains
+
+  subroutine glimmap_laea_init(params)
+
+    type(proj_laea),intent(inout) :: params
+
+    params%sinp=sin(params%latitude_of_projection_origin*D2R)
+    params%cosp=cos(params%latitude_of_projection_origin*D2R)
+
+    ! Check whether polar
+
+    if (params%latitude_of_projection_origin==90.0) then
+       params%pole=1
+    else if (params%latitude_of_projection_origin==-90) then
+       params%pole=-1
+    else
+       params%pole=0
+    end if
+
+  end subroutine glimmap_laea_init
+
+end module glimmer_map_init
